--- a/index.html
+++ b/index.html
@@ -213,6 +213,7 @@
                                     <p class="mt-4 text-lg text-body flex-grow">¿Te sientes abrumado por la IA mientras tus estudiantes ya la dominan?</p>
                                     <p class="mt-4 text-lg text-body flex-grow">Transforma tu manera de enseñar con herramientas que ya están revolucionando la educación. Domina la IA como un experto. Sin tecnicismos. Sin complicaciones. Solo resultados inmediatos. Recupera tu tiempo valioso y conviértete en el docente innovador que siempre quisiste ser.</p>
                                     <p class="mt-4 text-subtitle font-semibold">Dirigido a: Docentes y profesionales de la educación, profesores universitarios, coordinadores académicos.</p>
+                                    <p class="mt-4 text-title font-semibold">Descarga gratis 👇 mi guía <span class="text-subtitle font-semibold">Botiquín del Educador Moderno</span>: 10 prompts que te ayudarán en tu día a día como docente.</p>
                                     <div class="mt-6">
                                         <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
                                         onclick="trackEvent('click_cta', 'engagement', 'boton_educacion_ia')">Ver detalles</a>
@@ -271,7 +272,8 @@
                         <div class="p-8 md:p-12 flex flex-col">
                             <h4 class="text-2xl md:text-4xl font-bold text-title">Asesorías a tu Medida</h4>
                             <p class="mt-4 text-subtitle font-semibold" style="animation-delay: 0.2s;">De lo general a lo personalizado.</p>
-                            <p class="mt-4 text-lg text-body flex-grow">Asesorías adaptados a ti, tu contexto, tu empresa. ¿Resolución de un problema específico? ¿Ayuda en la implementación de herramientas de IA en tu empresa u organización? ¿Un prompt para automatizar tus tareas? Estudio tu problema e implemento la solución más adaptada para ti.</p>
+                            <p class="mt-4 text-lg text-body">Asesorías adaptadas a ti, tu contexto, tu empresa.</p>
+                            <p class="mt-4 text-lg text-body">Te ayudo a encontrar la mejor solución para tus necesidades específicas: Diseño de estrategias, aprendizaje personalizado, uso de herramientas de IA y de tecnología en general, creación de prompts para automatizar tareas,tableros de datos...</p>
                             <p class="mt-4 text-subtitle font-semibold">Dirigido a: Emprendedores, profesionales y organizaciones que buscan soluciones personalizadas.</p>
                             <div class="mt-6">
                                 <a href="#contacto" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" 
