Arreglo botones Aula

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                                     <p class="mt-4 text-lg text-body flex-grow">Transforma tu manera de enseñar con herramientas que ya están revolucionando la educación. Domina la IA como un experto. Sin tecnicismos. Sin complicaciones. Solo resultados inmediatos. Recupera tu tiempo valioso y conviértete en el docente innovador que siempre quisiste ser.</p>
                                     <p class="mt-4 text-subtitle font-semibold">Dirigido a: Docentes y profesionales de la educación, profesores universitarios, coordinadores académicos.</p>
                                     <p class="mt-4 text-title font-semibold">Descarga gratis 👇 mi guía <span class="text-subtitle font-semibold">Botiquín del Educador Moderno</span>: 10 prompts que te ayudarán en tu día a día como docente.</p>
-                                    <div class="mt-6">
+                                    <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
                                         <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
                                         onclick="trackEvent('click_cta', 'engagement', 'boton_educacion_ia')">Ver detalles</a>
                                         <a href="./assets/docs/botiquin-docentes.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
