--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                         <h4 class="text-2xl md:text-4xl font-bold text-title">IA para el Mundo Real: De Cero a Proactivo</h4>
                         <p class="mt-4 text-lg text-body">Comprende los fundamentos y aprende a comunicarte de forma efectiva con la IA. Aplica técnicas prácticas para redactar documentos, organizar información, generar ideas y automatizar tareas rutinarias. Es el curso esencial que todos deberían hacer.</p>
                         <p class="mt-4 text-subtitle font-semibold">Dirigido a: Profesionales y curiosos que sienten que se están quedando atrás y desean empezar a usar la IA.</p>
-                        <div class="mt-6">
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
                             <a href="./assets/docs/ia-basico.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
                             onclick="trackEvent('click_cta', 'engagement', 'boton_ia_basico')">Ver detalles</a>
                         </div>
@@ -164,7 +164,7 @@
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Presentaciones que Impactan con IA</h4>
                             <p class="mt-3 text-body flex-grow">Domina el proceso para crear presentaciones de alto impacto en una fracción del tiempo con la ayuda de herramientas de IA.</p>
-                            <div class="mt-4">
+                            <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
                                <a href="./assets/docs/presentaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
                                onclick="trackEvent('click_cta', 'engagement', 'boton_presentaciones_ia')">Ver detalles</a>
                             </div>
@@ -176,7 +176,7 @@
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Infografías con IA</h4>
                             <p class="mt-3 text-body flex-grow">Transforma datos e ideas complejas en infografías claras y atractivas para resolver problemas de comunicación visual con la ayuda de herramientas de IA.</p>
-                            <div class="mt-4">
+                            <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
                             <a href="./assets/docs/infografías-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
                             onclick="trackEvent('click_cta', 'engagement', 'boton_infografias_ia')">Ver detalles</a>
                             </div>
@@ -188,7 +188,7 @@
                         <div class="p-6 flex-grow flex flex-col">
                             <h4 class="text-xl font-bold text-title">Investigación Aumentada con IA</h4>
                             <p class="mt-3 text-body flex-grow">Aprende un flujo avanzado para investigar, analizar y sintetizar grandes volúmenes de información (PDFs, webs, etc) con la ayuda de IA.</p>
-                            <div class="mt-4">
+                            <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
                                <a href="./assets/docs/investigaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
                                onclick="trackEvent('click_cta', 'engagement', 'boton_investigaciones_ia')">Ver detalles</a>
                             </div>
@@ -275,7 +275,7 @@
                             <p class="mt-4 text-lg text-body">Asesorías adaptadas a ti, tu contexto, tu empresa.</p>
                             <p class="mt-4 text-lg text-body">Te ayudo a encontrar la mejor solución para tus necesidades específicas: Diseño de estrategias, aprendizaje personalizado, uso de herramientas de IA y de tecnología en general, creación de prompts para automatizar tareas,tableros de datos...</p>
                             <p class="mt-4 text-subtitle font-semibold">Dirigido a: Emprendedores, profesionales y organizaciones que buscan soluciones personalizadas.</p>
-                            <div class="mt-6">
+                            <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
                                 <a href="#contacto" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" 
                                 onclick="trackEvent('click_cta', 'engagement', 'boton_contacto')">Contáctame</a>
                             </div>
@@ -310,7 +310,7 @@
                         <p class="text-lg mt-6 text-body">
                             <span class="text-subtitle font-semibold">Soy Diana Emprende: Transformando mentes, desarrollando negocios.</span>
                         </p>
-                        <div class="mt-6">
+                        <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
                             <a href="./assets/docs/cv-diana.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener">Ver más</a>
                         </div>
                     </div>
