--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <p class="mt-4 text-lg text-body">Comprende los fundamentos y aprende a comunicarte de forma efectiva con la IA. Aplica técnicas prácticas para redactar documentos, organizar información, generar ideas y automatizar tareas rutinarias. Es el curso esencial que todos deberían hacer.</p>
                         <p class="mt-4 text-subtitle font-semibold">Dirigido a: Profesionales y curiosos que sienten que se están quedando atrás y desean empezar a usar la IA.</p>
                         <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
-                            <a href="./assets/docs/ia-basico.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
+                            <a href="./assets/docs/ia-basico.pdf" class="btn-secondary text-center font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
                             onclick="trackEvent('click_cta', 'engagement', 'boton_ia_basico')">Ver detalles</a>
                         </div>
                     </div>
@@ -165,7 +165,7 @@
                             <h4 class="text-xl font-bold text-title">Presentaciones que Impactan con IA</h4>
                             <p class="mt-3 text-body flex-grow">Domina el proceso para crear presentaciones de alto impacto en una fracción del tiempo con la ayuda de herramientas de IA.</p>
                             <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
-                               <a href="./assets/docs/presentaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
+                               <a href="./assets/docs/presentaciones-ia.pdf" class="btn-secondary text-center font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
                                onclick="trackEvent('click_cta', 'engagement', 'boton_presentaciones_ia')">Ver detalles</a>
                             </div>
                         </div>
@@ -177,7 +177,7 @@
                             <h4 class="text-xl font-bold text-title">Infografías con IA</h4>
                             <p class="mt-3 text-body flex-grow">Transforma datos e ideas complejas en infografías claras y atractivas para resolver problemas de comunicación visual con la ayuda de herramientas de IA.</p>
                             <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
-                            <a href="./assets/docs/infografías-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
+                            <a href="./assets/docs/infografías-ia.pdf" class="btn-secondary text-center font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
                             onclick="trackEvent('click_cta', 'engagement', 'boton_infografias_ia')">Ver detalles</a>
                             </div>
                         </div>
@@ -189,7 +189,7 @@
                             <h4 class="text-xl font-bold text-title">Investigación Aumentada con IA</h4>
                             <p class="mt-3 text-body flex-grow">Aprende un flujo avanzado para investigar, analizar y sintetizar grandes volúmenes de información (PDFs, webs, etc) con la ayuda de IA.</p>
                             <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
-                               <a href="./assets/docs/investigaciones-ia.pdf" class="btn-secondary font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
+                               <a href="./assets/docs/investigaciones-ia.pdf" class="btn-secondary text-center font-bold py-2 px-5 rounded-full text-sm" target="_blank" rel="noopener"
                                onclick="trackEvent('click_cta', 'engagement', 'boton_investigaciones_ia')">Ver detalles</a>
                             </div>
                         </div>
@@ -215,9 +215,9 @@
                                     <p class="mt-4 text-subtitle font-semibold">Dirigido a: Docentes y profesionales de la educación, profesores universitarios, coordinadores académicos.</p>
                                     <p class="mt-4 text-title font-semibold">Descarga gratis 👇 mi guía <span class="text-subtitle font-semibold">Botiquín del Educador Moderno</span>: 10 prompts que te ayudarán en tu día a día como docente.</p>
                                     <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
-                                        <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
+                                        <a href="./assets/docs/educacion-ia.pdf" class="btn-secondary text-center font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
                                         onclick="trackEvent('click_cta', 'engagement', 'boton_educacion_ia')">Ver detalles</a>
-                                        <a href="./assets/docs/botiquin-docentes.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
+                                        <a href="./assets/docs/botiquin-docentes.pdf" class="btn-secondary text-center font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener"
                                         onclick="trackEvent('click_cta', 'engagement', 'boton_educacion_ia')">Botiquín IA</a>
                                     </div>
                                 </div>
@@ -276,7 +276,7 @@
                             <p class="mt-4 text-lg text-body">Te ayudo a encontrar la mejor solución para tus necesidades específicas: Diseño de estrategias, aprendizaje personalizado, uso de herramientas de IA y de tecnología en general, creación de prompts para automatizar tareas,tableros de datos...</p>
                             <p class="mt-4 text-subtitle font-semibold">Dirigido a: Emprendedores, profesionales y organizaciones que buscan soluciones personalizadas.</p>
                             <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
-                                <a href="#contacto" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" 
+                                <a href="#contacto" class="btn-secondary text-center font-bold py-2 px-6 rounded-full inline-block" 
                                 onclick="trackEvent('click_cta', 'engagement', 'boton_contacto')">Contáctame</a>
                             </div>
                         </div>
@@ -311,7 +311,7 @@
                             <span class="text-subtitle font-semibold">Soy Diana Emprende: Transformando mentes, desarrollando negocios.</span>
                         </p>
                         <div class="mt-6 flex flex-col sm:flex-row gap-4 sm:gap-8">
-                            <a href="./assets/docs/cv-diana.pdf" class="btn-secondary font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener">Ver más</a>
+                            <a href="./assets/docs/cv-diana.pdf" class="btn-secondary text-center font-bold py-2 px-6 rounded-full inline-block" target="_blank" rel="noopener">Ver más</a>
                         </div>
                     </div>
                 </div>
@@ -344,7 +344,7 @@
                         <i class="fas fa-gift"></i>
                         <span>Descuento para grupos de 15 participantes o más</span>
                     </div>
-<!--                     <div class="footer-announcement-item item-animation hidden lg:flex items-center space-x-2">
+<!--                <div class="footer-announcement-item item-animation hidden lg:flex items-center space-x-2">
                         <i class="fas fa-users"></i>
                         <span>Cupos limitados - ¡Reserva ya!</span>
                     </div> -->
